# xara-cairo

./: .gitignore  INSTALL  LICENSE  Makefile.am  README  README.md  README_XARA_CAIRO.txt  autogen.sh  configure.in
GDraw/: GVersion.h  bshadow2-cairo.cpp  cstroke-cairo.cpp  gclip-cairo.cpp  gconsts.h  gdraw-cairo.cpp  gdraw.h  gdraw2-cairo.cpp  gdraw2.h  gdraw_cairo_private.h
Kernel/: GDrawIntf.cpp  GDrawIntf.h  XaDraw.cpp  XaDraw.h  XaDrwOld.cpp  XaDrwOld.h  aboutdlg.cpp  aboutdlg.h  ai5_eps.cpp  ai5_eps.h  ai8_eps.cpp  ai8_eps.h  ai_bmp.cpp  ai_bmp.h  ai_eps.cpp  ai_eps.h  ai_epsrr.cpp  ai_epsrr.h  ai_grad.cpp  ai_grad.h  ai_layer.cpp  ai_layer.h  aligndlg.cpp  aligndlg.h  animparams.cpp  animparams.h  app.cpp  app.h  appprefs.cpp  appprefs.h  appstate.h  aprps.cpp  aprps.h  archive.cpp  archive.h  arrows.cpp  arrows.h  attr.cpp  attr.h  attraggl.cpp  (+1138 more)
PreComp/: camtypes.h
Scripts/: .gitignore  build-resources.pl
epm/: xaralx.list
po/: POTFILES  XaraLX.pot
tools/: ShadowTl.cpp  ShadowTl.h  bevinfo.cpp  bevinfo.h  bevtool.cpp  bevtool.h  beztool.cpp  beztool.h  blndtool.cpp  blndtool.h  blnktool.cpp  blnktool.h  camtools.cpp  cntrtool.cpp  cntrtool.h  dragtool.cpp  dragtool.h  eliptool.cpp  eliptool.h  filltool.cpp  filltool.h  freehand.cpp  freehand.h  freeinfo.cpp  freeinfo.h  gridtool.cpp  gridtool.h  liveeffectsinfo.cpp  liveeffectsinfo.h  liveeffectstool.cpp  liveeffectstool.h  moldtool.cpp  moldtool.h  opbevel.cpp  opbevel.h  opbezier.cpp  opbezier.h  opclip.cpp  opclip.h  opcntr.cpp  (+61 more)
wxOil/: .gitignore  Makefile.am  appstate.cpp  atmfonts.cpp  atmfonts.h  basebar.h  basebar2.cpp  basestr.cpp  basestr.h  bblwnd.cpp  bblwnd.h  bfxalu.cpp  bfxalu.h  bfxpixop.cpp  bfxpixop.h  binreloc.c  binreloc.h  bitmapdropdown.cpp  bitmapdropdown.h  bitmapgriddropdown.cpp  bitmapgriddropdown.h  bmpfiltr.cpp  bmpfiltr.h  bubbleid.h  camdoc.cpp  camdoc.h  camdoctp.cpp  camdoctp.h  camelot.cpp  camelot.h  camframe.cpp  camframe.h  cammemory.cpp  cammemory.h  camnet.cpp  camnet.h  camplatform.cpp  camplatform.h  camprocess.cpp  (+343 more)
(+107 files in other folders)
